--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WeatherMVVM</string>
+    <string name="txt_main_city">Montevideo</string>
+    <string name="no_weather">No weather</string>
 </resources>
